Fix #16019 - [Bug] Improve tooltip positioning

--- a/becpg-share/src/main/assembly/web/modules/entity-datagrid/entity-datagrid.css
+++ b/becpg-share/src/main/assembly/web/modules/entity-datagrid/entity-datagrid.css
@@ -742,9 +742,10 @@ div.filterButtonsBar {
 
 /* Tooltip */
 
-div.dt-tooltip {
-  position: relative;
+
+div.dt-tooltip:hover {
   display: inline-block;
+	 position: relative;
 }
 
 div.dt-tooltip span.dt-tooltip-content {
