--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-quality-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-quality-form-config.xml
@@ -1540,11 +1540,11 @@
 				<field-visibility>
 					<show id="cm:name" />
 					<show id="cm:title" />
-					<show id="cm:description" force="true"/>
-					<show id="bcpg:code" for-mode="view" />
-					<show id="qa:qcSamplesCounter" for-mode="view"/>
-					<show id="qa:qcNextAnalysisDate" for-mode="view"/>
-					<show id="qa:qcState" for-mode="view"/>
+					<show id="cm:description" force="true" />
+					<show id="bcpg:code" />
+					<show id="qa:qcSamplesCounter" />
+					<show id="qa:qcNextAnalysisDate" />
+					<show id="qa:qcState" />
 					<show id="qa:qcControlPlans" />
 
 					<!-- batch -->
@@ -1575,9 +1575,9 @@
 					<field id="cm:title" set="mainInfo" />
 					<field id="cm:description" set="mainInfo" />
 					<field id="bcpg:code" read-only="true" set="mainInfo" />
-					<field id="qa:qcState" read-only="true" set="mainInfo" />
-					<field id="qa:qcSamplesCounter" read-only="true" set="mainInfo" />
-					<field id="qa:qcNextAnalysisDate" read-only="true" set="mainInfo" />
+					<field id="qa:qcState" set="mainInfo" />
+					<field id="qa:qcSamplesCounter" set="mainInfo" />
+					<field id="qa:qcNextAnalysisDate" set="mainInfo" />
 					<field id="qa:qcControlPlans" set="mainInfo" />
 
 					<set id="product-info" appearance="bordered-panel" label-id="becpg.forms.set.product-info.label" />
